# CMAKE_DLL_WINDOW

./: .gitignore
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  MyDll.cpp  MyDll.h  cpp.hint
